test/invalid-syntax/57163_expression_unit_as_id/unit_is_not_valid_id.mag
-- Author: 57163, Guilherme Dias
-- Can't use unit as id

fun main (_) : Unit -> Unit = 
	var unit = print(10);
	print(unit)
